[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/reward_selection.gd" id="1_reward_selection"]

[node name="RewardSelection" type="CanvasLayer"]
script = ExtResource("1_reward_selection")

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -260.0
offset_top = -220.0
offset_right = 260.0
offset_bottom = 220.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
custom_minimum_size = Vector2(480, 380)

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBox"]
text = "Select a Reward"

[node name="OptionA" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Upgrade A"

[node name="OptionB" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Upgrade B"

[node name="OptionC" type="Button" parent="Panel/MarginContainer/VBox"]
text = "Upgrade C"
